# hydrus-video-deduplicator

./: .env.example  .gitattributes  .gitignore  .gitmodules  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  main.py  mkdocs-gh-pages.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  secret.py  sitemap.xml  start.sh
.github/workflows/: build-docker.yml  build-windows-exe.yml  docs-publish.yml  python-publish.yml  test.yml  windows-publish.yml
build_files/windows/: hydrusvideodeduplicator-gui.spec  hydrusvideodeduplicator.spec
contact/: index.html
credits/: index.html
development/: index.html
docs/: contact.md  credits.md  development.md  faq.md  index.md  installation.md  theory.md  usage.md
faq/: index.html
installation/: index.html
search/: search_index.json
src/hydrus_video_deduplicator/: __about__.py  __main__.py  config.py  dedup.py  secret.py  vpdq.py  vpdq_index.py  vpdq_util.py
src/hydrusvideodeduplicator/: __about__.py  __main__.py  client.py  config.py  dedup.py  dedup_util.py  entrypoint.py  fvl.py  gui.py  hashing.py  page_logger.py  pdq.py  typing_utils.py  vpdq.py  vpdq_brute_matcher.py  vpdq_faiss.py  vpdq_util.py  winexe_entrypoint.py  winexe_gui_entrypoint.py
src/hydrusvideodeduplicator/db/: DedupeDB.py  migration_utils.py  vptree.py
src/hydrusvideodeduplicator/gui/: gui.py  stylesheet.py
src/hydrusvideodeduplicator/hydrus_api/: README.md  __init__.py  utils.py
src/hydrusvideodeduplicator/pdqhashing/: README.md
src/hydrusvideodeduplicator/pdqhashing/hasher/: pdq_hasher.py
src/hydrusvideodeduplicator/pdqhashing/pdq_types/: hash256.py
src/hydrusvideodeduplicator/pdqhashing/tests/: hash256_test.py  matrix_test.py  pdq_test.py
src/hydrusvideodeduplicator/pdqhashing/tools/: pdq_photo_hasher_tool.py
src/hydrusvideodeduplicator/pdqhashing/types/: containers.py  exceptions.py  hash256.py
src/hydrusvideodeduplicator/pdqhashing/utils/: matrix.py
src/hydrusvideodeduplicator/vpdqpy/: vpdqpy.py
src/pdqhashing/hasher/: pdq_hasher.py
src/vpdqpy/: __main__.py  vpdqpy.py
tests/: TESTS.MD  __init__.py  check_testdb.py  profile_vpdq.py  test_benchmark_vpdqpy.py  test_db.py  test_dedupe.py  test_main_vcr.py  test_vpdqpy.py  test_vpdqpy_hashing.py  tests.md
tests/acceptance_tests/: README.md  test_main_vcr.py
tests/benchmarks/: profile_vpdq.py  test_benchmark_vpdqpy.py
tests/docker/: docker testing notes.txt  docker-compose.yml  generate_bitkeep.sh
tests/docker/db/: client.caches.db  client.crt  client.db  client.key  client.mappings.db  client.master.db
tests/unit_tests/: README.md  test_db.py  test_vpdqpy.py
tests/video hashes/: S01_Big_Buck_Bunny_1080_10s_5MB-vp9.webm.txt  S01_Big_Buck_Bunny_1080_10s_5MB_H264.mp4.txt  S01_Big_Buck_Bunny_360_10s.gif.txt  S01_Big_Buck_Bunny_360_10s_5MB_H264.mp4.txt  S01_Big_Buck_Bunny_720_10s_1MB.mkv.txt  S01_Big_Buck_Bunny_720_10s_5MB_H264.mp4.txt  S02_Sintel_1080_10s_1MB.mp4.txt  S02_Sintel_1080_10s_5MB.mp4.txt  S02_Sintel_360_10s_2MB.mp4.txt  S02_Sintel_720_10s_1MB.mp4.txt
tests/videos/big_buck_bunny/: S01_Big_Buck_Bunny_1080_10s_5MB-vp9.webm  S01_Big_Buck_Bunny_720_10s_1MB.mkv
theory/: index.html
usage/: index.html
