[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrusvideodeduplicator"
dynamic = ["version"]
description = "Video deduplicator utility for Hydrus Network"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "hydrusvideodeduplicator", email = "applenannerapple@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "platformdirs",
    "rich",
    "numpy",
    "tqdm",
    "python-dotenv",
    "typer",
    "sqlitedict",
    "requests",
    "psutil",
    "joblib",
    # Below is for vpdqpy
    "Pillow",
    "pyav",
]

[project.urls]
Documentation = "https://github.com/hydrusvideodeduplicator/hydrus-video-deduplicator#readme"
Issues = "https://github.com/hydrusvideodeduplicator/hydrus-video-deduplicator/issues"
Source = "https://github.com/hydrusvideodeduplicator/hydrus-video-deduplicator"

[tool.hatch.build]
exclude = [
  "/.*",
  "/docs",
  "/tests",
]

[tool.hatch.version]
path = "src/hydrusvideodeduplicator/__about__.py"

[tool.hatch.envs.lint]
dependencies = [
  "black",
  "ruff",
]

[tool.hatch.envs.lint.scripts]
format = "black --check src"
lint = "ruff src"

[tool.black]
target-version = ["py310", "py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {"tests/**/*" = ["PLR2004", "S101", "TID252"]}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
