[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrusvideodeduplicator"
dynamic = ["version"]
description = "Video deduplicator utility for Hydrus Network"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "hydrusvideodeduplicator", email = "hydrusvideodeduplicator@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "platformdirs",
    "rich",
    "numpy",
    "tqdm",
    "python-dotenv",
    "typer",
    "sqlitedict",
    "requests",
    "psutil",
    "joblib",
    # Below is for vpdqpy
    "pillow",
    "pyav<12",
]

[project.urls]
Documentation = "https://github.com/hydrusvideodeduplicator/hydrus-video-deduplicator#readme"
Issues = "https://github.com/hydrusvideodeduplicator/hydrus-video-deduplicator/issues"
Source = "https://github.com/hydrusvideodeduplicator/hydrus-video-deduplicator"

[tool.hatch.build]
exclude = [
  "/.*",
  "/docs",
  "/tests",
]

[tool.hatch.version]
path = "src/hydrusvideodeduplicator/__about__.py"

[tool.hatch.envs.benchmark]
dependencies = [
    "pytest",
    "pytest-benchmark",
]

[tool.hatch.envs.benchmark.scripts]
# pytest-benchmark is a plugin for pytest that allows for benchmarking
vpdq = "python -m pytest tests/test_benchmark_vpdqpy.py {args}"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
]

[tool.hatch.envs.test.scripts]
all = "python -m pytest tests/test_dedupe.py tests/test_vpdqpy.py {args}"

[tool.hatch.envs.lint]
dependencies = [
  "black",
  "ruff",
]

[tool.hatch.envs.lint.scripts]
format = "black --check src"
lint = "ruff check src"

[tool.black]
target-version = ["py310", "py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = ["E", "F"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {"tests/**/*" = ["PLR2004", "S101", "TID252"]}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
